--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       <div class="container_total">
         <div class="presentacion" id="present">
           <hr>
-          <h1>Style Shoes</h1>
+          <h1 class="neon">Style Shoes</h1>
           <p>Es una tienda de Zapatillas Orientadas a todo tipo de personas,nuestra tienda busca cumplir las expectativas de cada cliente . fundada en 2016 por Ariel Garaventa</p>
         <hr>
         </div>
