--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="icono-menu">
           <img src="assets/iconos/menu.png" class="menu__img" id="icono-menu" />
         </div>
-        <div class="cont-menu active" id="menu">
+        <div class="cont-menu " id="menu">
           <ul>
             <li class="menu__item menu__item--show">
               <a href="/assets/Login/form.html" class="menu__link"><i class="fa-solid fa-user"></i></a>
@@ -81,11 +81,11 @@
             </li>
 
             <li class="menu__item menu__item--show">
-              <a href="#" class="menu__link">Catalog</a>
+              <a href="#products" class="menu__link">Catalog</a>
             </li>
 
             <li class="menu__item menu__item--show">
-              <a href="#" class="menu__link">JUMP</a>
+              <a href="#products" class="menu__link">JUMP</a>
             </li>
 
             <li class="menu__item menu__item--show">
