--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="mediaqueries.css">
   <script src="https://kit.fontawesome.com/5a8f3232d1.js" crossorigin="anonymous"></script>
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="https://unpkg.com/scrollreveal"></script>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="mediaqueries.css">
+
   <title>SHOES</title>
 </head>
 
@@ -362,6 +364,7 @@
   </footer>
   <script src="assets/objets/objets.js"></script>
   <script src="index.js"></script>
+  <script src="/assets/animaciones/animaciones.js"></script>
 </body>
 
 </html>
