--- a/index.html
+++ b/index.html
@@ -189,31 +189,31 @@
             <a href="#image5" class="next"><i class="fa-solid fa-arrow-left " id="flecha_izquierda"></i></a>
             <img src="/assets/Nike Air Max Plus III/1.jpg" alt="">
             <a href="#image2" class="next"><i class="fa-solid fa-arrow-right" id="flecha_derecha"></i></a>
-            <a href="" class="close"><i class="fa-solid fa-xmark"></i></a>
+            <a href="" class="close"><i class="fa-solid fa-xmark" id="cruz"></i></a>
           </article>
           <article class="light-box" id="image2">
             <a href="#image1" class="next"><i class="fa-solid fa-arrow-left" id="flecha_izquierda"></i></a>
             <img src="/assets/Nike Air Max Plus III/2.jpg" alt="">
             <a href="#image3" class="next"><i class="fa-solid fa-arrow-right" id="flecha_derecha"></i></a>
-            <a href="" class="close"><i class="fa-solid fa-xmark"></i></a>
+            <a href="" class="close"><i class="fa-solid fa-xmark" id="cruz"></i></a>
           </article>
           <article class="light-box" id="image3">
             <a href="#image2" class="next"><i class="fa-solid fa-arrow-left" id="flecha_izquierda"></i></a>
             <img src="/assets/Nike Air Max Plus III/3.jpg" alt="">
             <a href="#image4" class="next"><i class="fa-solid fa-arrow-right" id="flecha_derecha"></i></a>
-            <a href="" class="close"><i class="fa-solid fa-xmark"></i></a>
+            <a href="" class="close"><i class="fa-solid fa-xmark" id="cruz"></i></a>
           </article>
           <article class="light-box" id="image4">
             <a href="#image3" class="next"><i class="fa-solid fa-arrow-left" id="flecha_izquierda"></i></a>
             <img src="/assets/Nike Air Max Plus III/4.jpg" alt="">
             <a href="#image5" class="next"><i class="fa-solid fa-arrow-right" id="flecha_derecha"></i></a>
-            <a href="" class="close"><i class="fa-solid fa-xmark"></i></a>
+            <a href="" class="close"><i class="fa-solid fa-xmark" id="cruz"></i></a>
           </article>
           <article class="light-box" id="image5">
             <a href="#image4" class="next"><i class="fa-solid fa-arrow-left" id="flecha_izquierda"></i></a>
             <img src="/assets/Nike Air Max Plus III/5.jpg" alt="">
             <a href="#image1" class="next"><i class="fa-solid fa-arrow-right" id="flecha_derecha"></i></a>
-            <a href="" class="close"><i class="fa-solid fa-xmark"></i></a>
+            <a href="" class="close"><i class="fa-solid fa-xmark" id="cruz"></i></a>
           </article>
 
       </section>
